--- a/ui/index.html
+++ b/ui/index.html
@@ -9,7 +9,7 @@
         </div>
         <br>
         <div class="center text-big bold">
-            Hi! Mysel Shahin This is mine first webapp.
+            Hi! My self Shahin This is mine first webapp.
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
